# NiceHash-Afterburner-Profile-Switcher

./: .gitignore  APIRequests.py  NiceHashAfterburnerProfileSwitcher.py  NiceHashAlgoID.py  README.md  config.ini  pyproject.toml
